--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Patcharapon Mondee",
+  "author": "Arunpong Somlok",
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.6.1",
